--- a/Aurora.vcxproj
+++ b/Aurora.vcxproj
@@ -225,6 +225,7 @@
     <ClCompile Include="imgui_impl_win32.cpp" />
     <ClCompile Include="imgui_tables.cpp" />
     <ClCompile Include="imgui_widgets.cpp" />
+    <ClCompile Include="InputSystem.cpp" />
     <ClCompile Include="Instance.cpp" />
     <ClCompile Include="Interfaces.cpp" />
     <ClCompile Include="Logger.cpp" />
@@ -251,6 +252,7 @@
     <ClInclude Include="imstb_rectpack.h" />
     <ClInclude Include="imstb_textedit.h" />
     <ClInclude Include="imstb_truetype.h" />
+    <ClInclude Include="InputSystem.hpp" />
     <ClInclude Include="Instance.hpp" />
     <ClInclude Include="CInterfaceRegistry.hpp" />
     <ClInclude Include="Interfaces.hpp" />
