Added SchemaSystem interface and its respective classes/structs/enums and other.

--- a/Aurora.vcxproj
+++ b/Aurora.vcxproj
@@ -241,13 +241,20 @@
     <ClInclude Include="CHookObject.hpp" />
     <ClInclude Include="Color.hpp" />
     <ClInclude Include="CreateMove.hpp" />
+    <ClInclude Include="CSchemaClassInfo.hpp" />
+    <ClInclude Include="CSchemaEnumInfo.hpp" />
+    <ClInclude Include="CSchemaEnumInfoData.hpp" />
     <ClInclude Include="CSchemaSystem.hpp" />
     <ClInclude Include="CSchemaSystemTypeScope.hpp" />
+    <ClInclude Include="CSchemaType.hpp" />
     <ClInclude Include="CUtlMap.hpp" />
     <ClInclude Include="CUtlMemory.hpp" />
     <ClInclude Include="CUtlString.hpp" />
     <ClInclude Include="CUtlTSHash.hpp" />
     <ClInclude Include="CUtlVector.hpp" />
+    <ClInclude Include="EAtomicCategory.hpp" />
+    <ClInclude Include="ETypeCategory.hpp" />
+    <ClInclude Include="FieldType.hpp" />
     <ClInclude Include="FNVHash.hpp" />
     <ClInclude Include="hde32.h" />
     <ClInclude Include="hde64.h" />
@@ -273,7 +280,18 @@
     <ClInclude Include="Menu.hpp" />
     <ClInclude Include="MinHook.h" />
     <ClInclude Include="pstdint.h" />
+    <ClInclude Include="SchemaBaseClassInfoData.hpp" />
+    <ClInclude Include="SchemaBindings.hpp" />
+    <ClInclude Include="SchemaClassFieldData.hpp" />
+    <ClInclude Include="SchemaClassFlags.hpp" />
     <ClInclude Include="SchemaDefinitions.hpp" />
+    <ClInclude Include="SchemaEnumeratorInfoData.hpp" />
+    <ClInclude Include="SchemaFieldMetadataOverrideData.hpp" />
+    <ClInclude Include="SchemaFieldMetadataOverrideSetData.hpp" />
+    <ClInclude Include="SchemaMetadataEntryData.hpp" />
+    <ClInclude Include="SchemaNetworkValue.hpp" />
+    <ClInclude Include="SchemaStaticFieldData.hpp" />
+    <ClInclude Include="SchemaVarName.hpp" />
     <ClInclude Include="table32.h" />
     <ClInclude Include="table64.h" />
     <ClInclude Include="trampoline.h" />
